[gd_scene load_steps=26 format=3 uid="uid://b81g0110sclil"]

[ext_resource type="Script" uid="uid://ck3laker8dkkw" path="res://main game screens/choose_item_screen.gd" id="1_jfkit"]
[ext_resource type="Texture2D" uid="uid://eifa4pgv0wan" path="res://rps game stuff/choose your item screen empty.PNG" id="2_jfkit"]
[ext_resource type="Texture2D" uid="uid://dhe64j3u3iugh" path="res://rps game stuff/rock.PNG" id="3_sl1im"]
[ext_resource type="Texture2D" uid="uid://biiet7kof6fks" path="res://rps game stuff/paper.PNG" id="4_u2kb4"]
[ext_resource type="Texture2D" uid="uid://t4je6uu11mgo" path="res://rps game stuff/scissors.PNG" id="5_0ftg8"]
[ext_resource type="FontFile" uid="uid://bu6t45u86xt7f" path="res://rps game stuff/Pixel Digivolve.otf" id="6_0w6li"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b824s"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.14901961, 0.31764707, 0.2901961, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_cjahx"]

[sub_resource type="Animation" id="Animation_u2kb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rock control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rock control:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("rock control/rock button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("rock control/rock desc:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_332qf"]
resource_name = "rock_button_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rock control/rock button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("rock control/rock desc:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0ftg8"]
resource_name = "rock_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rock control:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_cjahx"]
resource_name = "rock_to_middle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("rock control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(350, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ftg8"]
_data = {
&"RESET": SubResource("Animation_u2kb4"),
&"rock_button_fade_out": SubResource("Animation_332qf"),
&"rock_fade_out": SubResource("Animation_0ftg8"),
&"rock_to_middle": SubResource("Animation_cjahx")
}

[sub_resource type="Animation" id="Animation_b824s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("paper button:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("paper desc:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_2suu6"]
resource_name = "paper_button_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("paper button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("paper desc:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_0w6li"]
resource_name = "paper_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_yxkk2"]
_data = {
&"RESET": SubResource("Animation_b824s"),
&"paper_button_fade_out": SubResource("Animation_2suu6"),
&"paper_fade_out": SubResource("Animation_0w6li")
}

[sub_resource type="Animation" id="Animation_ntu31"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("scissors button:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("scissors desc:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_juvs7"]
resource_name = "scissors_button_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("scissors button:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("scissors desc:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_i8dhp"]
resource_name = "scissors_fade_out"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_yxkk2"]
resource_name = "scissors_to_middle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-363, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_332qf"]
_data = {
&"RESET": SubResource("Animation_ntu31"),
&"scissors_button_fade_out": SubResource("Animation_juvs7"),
&"scissors_fade_out": SubResource("Animation_i8dhp"),
&"scissors_to_middle": SubResource("Animation_yxkk2")
}

[sub_resource type="Animation" id="Animation_fpsjk"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_snqlq"]
resource_name = "typing_chosen"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o7c68"]
_data = {
&"RESET": SubResource("Animation_fpsjk"),
&"typing_chosen": SubResource("Animation_snqlq")
}

[node name="choose item screen" type="Node2D"]
script = ExtResource("1_jfkit")

[node name="choose item bg" type="TextureRect" parent="."]
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("2_jfkit")

[node name="title button cover" type="ColorRect" parent="."]
offset_left = 374.0
offset_top = 33.0
offset_right = 923.0
offset_bottom = 66.0
color = Color(0.24705882, 0.4627451, 0.41960785, 1)

[node name="back to home button cover" type="ColorRect" parent="."]
offset_left = 995.0
offset_top = 645.0
offset_right = 1276.0
offset_bottom = 713.0
color = Color(0.14901961, 0.31764707, 0.2901961, 1)

[node name="back to home button" type="Button" parent="."]
offset_left = 1005.0
offset_top = 657.0
offset_right = 1265.0
offset_bottom = 702.0
flat = true

[node name="rock control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 484.0
offset_bottom = 658.0

[node name="rock" type="TextureRect" parent="rock control"]
layout_mode = 0
offset_left = 63.0
offset_top = 110.0
offset_right = 469.0
offset_bottom = 516.0
texture = ExtResource("3_sl1im")
expand_mode = 1

[node name="rock desc" type="Label" parent="rock control"]
layout_mode = 0
offset_left = 195.0
offset_top = 108.0
offset_right = 371.0
offset_bottom = 180.0
theme_override_fonts/font = ExtResource("6_0w6li")
theme_override_font_sizes/font_size = 18
text = "beats scissors, is beaten by paper"
horizontal_alignment = 1
autowrap_mode = 3

[node name="rock button" type="Button" parent="rock control"]
layout_mode = 0
offset_left = 168.0
offset_top = 490.0
offset_right = 403.0
offset_bottom = 549.0
theme_override_colors/font_color = Color(0.14901961, 0.31764707, 0.2901961, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("6_0w6li")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_b824s")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_cjahx")
text = "rock"
metadata/_edit_use_anchors_ = true

[node name="rock animation" type="AnimationPlayer" parent="rock control"]
root_node = NodePath("../..")
libraries = {
&"": SubResource("AnimationLibrary_0ftg8")
}

[node name="paper control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1279.0
offset_bottom = 706.0

[node name="paper" type="TextureRect" parent="paper control"]
layout_mode = 0
offset_left = 474.0
offset_top = 139.0
offset_right = 802.0
offset_bottom = 475.6491
texture = ExtResource("4_u2kb4")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="paper button" type="Button" parent="paper control"]
layout_mode = 0
offset_left = 529.0
offset_top = 490.0
offset_right = 764.0
offset_bottom = 549.0
theme_override_colors/font_color = Color(0.14901961, 0.31764707, 0.2901961, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("6_0w6li")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_b824s")
text = "paper"
metadata/_edit_use_anchors_ = true

[node name="paper desc" type="Label" parent="paper control"]
layout_mode = 0
offset_left = 547.0
offset_top = 110.0
offset_right = 748.0
offset_bottom = 182.0
theme_override_fonts/font = ExtResource("6_0w6li")
theme_override_font_sizes/font_size = 18
text = "beats rock, is beaten by scissors"
horizontal_alignment = 1
autowrap_mode = 3

[node name="paper animation" type="AnimationPlayer" parent="paper control"]
libraries = {
&"": SubResource("AnimationLibrary_yxkk2")
}

[node name="scissors control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1279.0
offset_bottom = 706.0

[node name="scissors" type="TextureRect" parent="scissors control"]
layout_mode = 0
offset_left = 998.99994
offset_top = 28.999947
offset_right = 1373.7843
offset_bottom = 412.55145
rotation = 0.8552113
texture = ExtResource("5_0ftg8")
expand_mode = 1
metadata/_edit_use_anchors_ = true

[node name="scissors button" type="Button" parent="scissors control"]
layout_mode = 0
offset_left = 890.0
offset_top = 490.0
offset_right = 1125.0
offset_bottom = 549.0
theme_override_colors/font_color = Color(0.14901961, 0.31764707, 0.2901961, 1)
theme_override_constants/outline_size = 0
theme_override_fonts/font = ExtResource("6_0w6li")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxFlat_b824s")
text = "scissors"
metadata/_edit_use_anchors_ = true

[node name="scissors desc" type="Label" parent="scissors control"]
layout_mode = 0
offset_left = 931.0
offset_top = 107.0
offset_right = 1087.0
offset_bottom = 179.0
theme_override_fonts/font = ExtResource("6_0w6li")
theme_override_font_sizes/font_size = 18
text = "beats paper, is beaten by rock"
horizontal_alignment = 1
autowrap_mode = 3

[node name="scissors animation" type="AnimationPlayer" parent="scissors control"]
libraries = {
&"": SubResource("AnimationLibrary_332qf")
}

[node name="chosen label" type="Label" parent="."]
offset_left = 190.0
offset_top = 22.0
offset_right = 1094.0
offset_bottom = 75.0
theme_override_fonts/font = ExtResource("6_0w6li")
theme_override_font_sizes/font_size = 40
horizontal_alignment = 1
visible_characters = 0
visible_ratio = 0.0

[node name="chosen label animation" type="AnimationPlayer" parent="."]
root_node = NodePath("../chosen label")
libraries = {
&"": SubResource("AnimationLibrary_o7c68")
}

[connection signal="pressed" from="back to home button" to="." method="_on_back_to_home_button_pressed"]
[connection signal="pressed" from="rock control/rock button" to="." method="_on_rock_button_pressed"]
[connection signal="pressed" from="paper control/paper button" to="." method="_on_paper_button_pressed"]
[connection signal="pressed" from="scissors control/scissors button" to="." method="_on_scissors_button_pressed"]
